SERVER-20054 Duplicate Key error when trying to start mongos with config rs on empty cluster